# python-service-history

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: __init__.py
src/lambda_function/: __init__.py  lambda_handler.py
terraform/: README.md  appconfig_config.tf  build_and_deploy.sh  iam.tf  main.tf  outputs.tf  variables.tf  versions.tf
tests/: __init__.py  test_lambda_handler.py
